@@ -2,6 +2,12 @@
 lovely.tal
 ==========
 
+after
+=====
+
+ - always strip out script-tags 
+ - added "allow-scripts" for explicit enabling of script-tags
+
 2008/11/12 0.5.0a1:
 ===================
 
